# FamilyHuddle

./: .gitignore  DEPLOYMENT.md  GITHUB_SETUP.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  devcontainer-ci.yml  pr-validation.yml
.streamlit/: secrets.toml.template
scripts/: init_data.py  init_production.py
src/family_huddle/: __init__.d  __init__.py
src/family_huddle/pages/: __init__.d  __init__.py  auth.d  auth.py  home.d  home.py  leaderboard.d  leaderboard.py  pools.d  pools.py  team_selection.d  team_selection.py
src/family_huddle/services/: database.d  database.py  local_db.d  local_db.py  nfl_data.d  nfl_data.py
supabase/: config.toml
supabase/migrations/: 20250705_family_huddle_schema.sql
tests/: test_placeholder.py
