[project]
name = "family-huddle"
version = "0.1.0"
description = "A local football pool management system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Brian Moore"},
]

dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dateutil>=2.8.0",
    "plotly>=5.18.0",
    "altair>=5.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "ipython>=8.18.0",
    "watchdog>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008"]  # Line too long, function calls in argument defaults

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/family_huddle --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src/family_huddle"]
omit = ["*/tests/*", "*/__pycache__/*"]

